web: no vertical scrollbars, fix weird scrolling behaviour on mobile
It seems that browsers add "additional height" to a page to fit the whole vertical content (at least to a certain limit) when zooming out. setting the additional properties seems to prevent that.

--- a/web/src/app/engine/engine-controller/engine-controller.component.css
+++ b/web/src/app/engine/engine-controller/engine-controller.component.css
@@ -14,7 +14,8 @@
 
     grid-template-columns: 1fr 1fr 10fr;
     grid-template-rows:    auto 1fr auto auto auto;
-    height: calc(100dvh - 2 * var(--small-padding));
+    height: calc(100dvh - 2 * var(--small-padding) - 18px); /* 18px is to hack around the scrollbar https://issues.chromium.org/issues/372425128 */
+    min-width: min(500px, 90dvw);
     box-sizing: border-box;
     gap: 4px;
 }
